# capax

./: .ansible-lint  .checkov.yml  README.md  ansible.cfg  inventory.yml  known_hosts  playbook.yml  pyproject.toml
.github/workflows/: execute_deployment.yml  execute_tests.yml  install_dependencies.yml
roles/docker/defaults/: main.yml
roles/docker/handlers/: main.yml
roles/docker/tasks/: main.yml
roles/docker/templates/: daemon.json.j2
roles/sshd/defaults/: main.yml
roles/sshd/handlers/: main.yml
roles/sshd/tasks/: main.yml
roles/telegraf/defaults/: main.yml
roles/telegraf/handlers/: main.yml
roles/telegraf/tasks/: main.yml
roles/telegraf/templates/: telegraf.conf
roles/traefik/defaults/: main.yml
roles/traefik/tasks/: main.yml
roles/traefik/templates/: docker-compose.yml
roles/unattended_upgrade/defaults/: main.yml
roles/unattended_upgrade/tasks/: main.yml
